# disease-dashboard-1

chronic_illness_monitor/: .env.example  Snakefile  config.yaml  env  pyproject.toml  settings.py
chronic_illness_monitor/layer1/: ingestion_pipeline.py
chronic_illness_monitor/layer1/connectors/: sources.py
chronic_illness_monitor/layer1/models/: schema.py
chronic_illness_monitor/layer1/utils/: http.py
chronic_illness_monitor/layer2/: etl_pipeline.py
chronic_illness_monitor/layer3/: training_pipeline.py
chronic_illness_monitor/layer4/: inference_pipeline.py
chronic_illness_monitor/layer5/: monitoring_pipeline.py
chronic_illness_monitor/layer6/: sink_pipeline.py
data/raw/gbd/: IHME-GBD_2023_DATA-9feb184e-1.csv
layer1/: ingestion_pipeline.py
layer1/connectors/: sources.py
layer2/: etl_pipeline.py
layer4/: inference_pipeline.py
layer6/: sink_pipeline.py
